# PyGenIDL001

./: README.md  app.ts  justfile  package.json  pnpm-workspace.yaml  pyproject.toml
Drift/: program_id.py
Drift/accounts/: __init__.py  highLeverageModeConfig.py  insuranceFundStake.py  openbookV2FulfillmentConfig.py  perpMarket.py  phoenixV1FulfillmentConfig.py  prelaunchOracle.py  protectedMakerModeConfig.py  protocolIfSharesTransferConfig.py  pythLazerOracle.py  rFQUser.py  referrerName.py  serumV3FulfillmentConfig.py  spotMarket.py  state.py  swiftUserOrders.py  user.py  userStats.py
Drift/errors/: __init__.py  drift.py
Drift/instructions/: addInsuranceFundStake.py  addPerpLpShares.py  adminDisableUpdatePerpBidAskTwap.py  beginSwap.py  cancelOrder.py  cancelOrderByUserId.py  cancelOrders.py  cancelOrdersByIds.py  cancelRequestRemoveInsuranceFundStake.py  deleteInitializedPerpMarket.py  deleteInitializedSpotMarket.py  deletePrelaunchOracle.py  deleteSwiftUserOrders.py  deleteUser.py  deposit.py  depositIntoPerpMarketFeePool.py  depositIntoSpotMarketRevenuePool.py  depositIntoSpotMarketVault.py  disableUserHighLeverageMode.py  enableUserHighLeverageMode.py  endSwap.py  fillPerpOrder.py  fillSpotOrder.py  (+171 more)
Lifinity/: program_id.py
dynamic_ix/: program_id.py
idls/: drift.json  dynamic_ix.json  pump.json  scope.json  system.json  token2022.json
jup/: program_id.py
notebooks/: jup.ipynb  pump.ipynb  scope.ipynb  system.ipynb  token2022.ipynb  utils.py
pump/: program_id.py
pump_amm/: program_id.py
scope/: program_id.py
token2022/: program_id.py
(+352 files in other folders)
